k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-demo
  namespace: jenkins-k8s
  labels:
    app: php-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-demo
  template:
    metadata:
      labels:
        app: php-demo
    spec:
      imagePullSecrets:
      - name: harbor
      containers:
      - name: php-demo
        image: reg.analyticservice.net/jenkins/php-demo:<BUILD_TAG>
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
