ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-demo 
  namespace: jenkins-k8s
spec:
  rules:
    - host: php.demo.com    
      http:
        paths:
        - path: /
          backend:
            serviceName: php-demo 
            servicePort: 8080
